--- a/src/ZectranetBundle/Resources/views/project.html.twig
+++ b/src/ZectranetBundle/Resources/views/project.html.twig
@@ -50,19 +50,6 @@
         {% include '@Zectranet/projectVersionsModal.html.twig' %}
 
         <div class="row">
-            <div class="col-xs-12 col-md-12">
-                <blockquote>
-                    <footer>
-                        <cite title="Source Title">Project Description</cite>
-                    </footer>
-
-                    <p>{{ project.description }}</p>
-
-                </blockquote>
-            </div>
-        </div>
-
-        <div class="row">
             <div class="col-md-4">
                 <div class="row">
                     <!-- BEGIN OF PROJECT USERS PANEL -->
@@ -185,7 +172,13 @@
                 <div class="panel panel-default list-group">
                     <div class="list-group-item" style="background:#ddedf4; color:#606060;">
                         <i class="fa fa-tasks"></i>
-                        <strong>Tasks</strong>
+                        <strong>
+                            Tasks
+                            <span class="btn btn-default pull-right" ng-click="getTasks();" style="margin: 0;">
+                                <i class="fa fa-repeat"></i>
+                            </span>
+                            <span class="clearfix"></span>
+                        </strong>
                     </div>
 
                     <div cg-busy="promise" class="panel-body">
@@ -295,7 +288,6 @@
     <script src="{{ asset('bundles/zectranet/js/notify.min.js') }}" type="text/javascript"></script>
 
     <script src="{{ asset('bundles/zectranet/js/custom/chatController.js') }}" type="text/javascript"></script>
-    <script src="{{ asset('bundles/zectranet/js/custom/taskController.js') }}" type="text/javascript"></script>
     <script src="{{ asset('bundles/zectranet/js/custom/projectController.js') }}" type="text/javascript"></script>
     <script src="{{ asset('bundles/zectranet/js/custom/documentsController.js') }}" type="text/javascript"></script>
 
