--- a/src/ZectranetBundle/Resources/views/task.html.twig
+++ b/src/ZectranetBundle/Resources/views/task.html.twig
@@ -18,7 +18,7 @@
             <div class="row">
                 <ol class="breadcrumb" style="margin: 0 -30px; border-radius: 0 !important; padding: 12px 50px; background-color: #fbfbfb; ">
                     <li>
-                        <a href="{{ path('zectranet_user_home') }}">Summary</a>
+                        <a href="{{ path('zectranet_show_office', { 'office_id': task.project.office.id }) }}">{{ task.project.office.name }}</a>
                     </li>
                     <li>
                         {% set projectBreadcrums = (task.project.parent) ? task.project.parent : task.project %}
@@ -55,9 +55,10 @@
                                     <input type="text" class="form-control btn-group-justified" style="border: none;font-weight: bold;" name="name" ng-init="taskInfoEdit.name = '{{ task.name }}'" ng-model="taskInfoEdit.name" ng-minlength="5" ng-maxlength="100" pattern="[A-Za-z0-9 ]{1,}" required>
 
                                     <div ng-messages="formTaskEdit.name.$error" style="color: red;">
-                                        <span ng-message="pattern">format: "A-Z,a-z,0-9"</span>
-                                        <span ng-message="minlength">Min length of password is 5 characters</span>
-                                        <span ng-message="maxlength">Max length of password is 100 characters</span>
+                                        <span ng-message="required">Please, enter name</span>
+                                        <span ng-message="pattern">Please match the requested format: "A-Z,a-z,0-9, "</span>
+                                        <span ng-message="minlength">Min length of name is 5 characters</span>
+                                        <span ng-message="maxlength">Max length of name is 100 characters</span>
                                     </div>
 
                                 </div>
@@ -462,8 +463,9 @@
                                 <textarea class="form-control" style="border: none; height: 170px; resize: vertical; font-weight: bold;" name="description" ng-init="description = '{{ task.description }}'" ng-model="description" ng-minlength="5" ng-maxlength="5000" required></textarea>
 
                                 <div ng-messages="formDescriptionEdit.description.$error" style="color: red;">
-                                    <span ng-message="minlength">Min length of password is 5 characters</span>
-                                    <span ng-message="maxlength">Max length of password is 5000 characters</span>
+                                    <span ng-message="required">Please, enter description</span>
+                                    <span ng-message="minlength">Min length of description is 5 characters</span>
+                                    <span ng-message="maxlength">Max length of description is 5000 characters</span>
                                 </div>
 
                             </div>
@@ -542,7 +544,7 @@
                 <!-- End of Task Nav Tabs -->
 
                 <div id="tasks-tab-content" class="tab-content">
-                    <div id="task-logs" class="tab-pane fade" style="max-height: 500px; min-height: 100px; overflow-y: auto;" scroll-glue="true">
+                    <div id="task-logs" class="tab-pane fade" style="max-height: 500px; min-height: 100px; overflow-y: auto;" scroll-glue>
                         <table class="table">
                             <thead>
                             <tr>
