--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -741,6 +741,7 @@
 	<script src="{{ asset('bundles/zectranet/js/custom/Data/Services/data.tasksSort.service.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/zectranet/js/custom/Data/Filters/data.tasksFilter.service.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/zectranet/js/custom/Data/Services/data.homeOffice.service.js') }}" type="text/javascript"></script>
+	<script src="{{ asset('bundles/zectranet/js/custom/Data/Services/data.time.service.js') }}" type="text/javascript"></script>
 
     <!------------------------------ PROJECT MODULE ----------------------------->
     <script src="{{ asset('bundles/zectranet/js/custom/Project/project.js') }}" type="text/javascript"></script>
